argocd/apps/charts/website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: website
