argocd/apps/charts/website/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
  name: website
  namespace: website
spec:
  rules:
    - host: barnes.biz
      http:
        paths:
          - backend:
              service:
                name: website
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - barnes.biz
      secretName: website-tls
